# stmaterial

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  noxfile.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: deploy-docs.yml  release.yml
docs/: conf.py  develop.md  features.md  index.md  quickstart.md  recommendations.md  requirements.txt  web-components.rst
docs/_static/: logo-by-logoart.logoart  slides.yaml
docs/_static/links/: gallery.yaml
docs/customisation/: sidebar.md
docs/examples/: fullwidth.md  hidesidenav.md  hidetoc.md  hidetocnav.md  index.md
docs/examples/kitchen-sink/: api.rst  blocks.rst  lists.rst
docs/examples/pages/: index.md
docs/examples/reference/: admonitions.md  api.md  hyperlinks.md  images.md  index.md  lists.md  tabs.md
docs/kitchen-sink/: blocks.rst  lists.rst
docs/posts/plangs/: 2021-python-pathlib.md  2022-pytest-tutorial.md  2022-python-setup.md  2022-python-typing.md
docs/reference/: admonitions.md  code-blocks.md  images.md  tables.md  tabs.md  text-formatting.md
docs/user_guide/: edit-button.md  fonts.md  header.md  index.md  logo.md  quickstart.md  sidebar.md  sidenav.md  source-buttons.md  toc.md  tocnav.md  variables.md
docs/user_guide_tmp/: edit-button.md  fonts.md  header.md  index1.md  logo.md  sidebar.md
src/stmaterial/: __init__.py  _navigation.py  _transforms.py  _translations.py  directives.py  utils.py
src/stmaterial/assets/scripts/: materialize.js  stmaterial.js
src/stmaterial/assets/styles/: materialize.scss  stmaterial.sass
src/stmaterial/assets/styles/abstracts/: _mixins.scss
src/stmaterial/assets/styles/base/: _fonts.scss  _index.sass  _theme.sass  _typography.sass  _typography.scss
src/stmaterial/assets/styles/components/: _article-bottom.scss  _article-metadata-info.scss  _article-top.scss  _article.sass  _back-to-top.scss  _brand-logo.scss  _breadcrumb.sass  _breadcrumb.scss  _dropdown.scss  _edit-update-meta.scss  _footer.sass  _footer.scss  _index.sass  _navbar.sass  _navbar.scss  _prev-next.scss  _scrollbar.scss  _search-field.sass  _searchbox.scss  _sidenav-icons.scss  _sidenav-toggle.scss  _sidenav.sass  _stm-sidenav.scss  _table-of-contents.sass  _table_of_contents.sass
src/stmaterial/assets/styles/content/: _admonitions.sass  _admonitions.scss  _code.sass  _index.sass  _spans.scss  _tables.sass  _target.sass
src/stmaterial/assets/styles/extensions/: _ablog.sass  _ablog.scss  _index.sass  _myst-nb.scss  _timeline.scss  _tippy.sass  _togglebutton.scss
src/stmaterial/assets/styles/materialize/: _index.sass
src/stmaterial/assets/styles/patch/: _index.sass  _legacy.sass  _patch.scss  _test.scss
src/stmaterial/assets/styles/sections/: _article.sass  _footer.scss  _headnav.scss  _index.sass  _sidebar-toggle.scss  _stm-sidenav.scss
src/stmaterial/assets/styles/variables/: _admonitions.scss  _color.scss  _colors-old.scss  _colors.scss  _fonts.scss  _icons.scss  _index.sass  _layout.scss  _spacing.scss
src/stmaterial/demo/: sphinxext.py
src/stmaterial/theme/stmaterial/: base.html  domainindex.html  genindex.html  globaltoc.html  layout.html  localtoc.html  search.html  theme.conf
(+38 files in other folders)
