[build-system]
requires = ["sphinx-theme-builder >= 0.2.0b2"]
build-backend = "sphinx_theme_builder"

[tool.sphinx-theme-builder]
node-version = "18.15.0"
theme-name = "stmaterial"
additional-compiled-static-assets = [
  "webpack-macros.html",
  "locales/",
  "vendor/",
  "scripts/materialize.js",
]

[project]
name = "stmaterial"
description = "A sphinx theme of materializecss."
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
  "beautifulsoup4",
  "sphinx >= 5.0,<7.0",
  "sphinx-basic-ng",
  "pygments >= 2.7",
]

license = { file = "LICENSE" }
authors = [{ name = "zclab", email = "syfhub@hotmail.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
dev = ['sphinx-theme-builder[cli] >= 0.2.0b2']

[project.entry-points]
"sphinx.html_themes" = { stmaterial = "stmaterial" }

[project.urls]
Repository = "https://github.com/zclab/stmaterial"
Documentation = "https://zclab.github.io/stmaterial/"
